[gd_scene load_steps=6 format=3 uid="uid://3me51fmlu5ku"]

[ext_resource type="Theme" uid="uid://m0avgysysptt" path="res://res/scoreboard_theme.tres" id="1_2kch6"]
[ext_resource type="Script" path="res://scenes/Tappers/tappers.gd" id="1_dy61m"]
[ext_resource type="Theme" uid="uid://de6i5t4i0i75t" path="res://res/Alternate_tapper_theme.tres" id="2_h3gj1"]
[ext_resource type="Texture2D" uid="uid://bu37wb68yl361" path="res://res/assets/audio_icon.png" id="3_4h1cd"]
[ext_resource type="Texture2D" uid="uid://ctvi1p243dtqs" path="res://res/assets/slot_grid_icon.png" id="5_6bqow"]

[node name="Tappers" type="Node2D"]
script = ExtResource("1_dy61m")

[node name="SecTapper" type="Button" parent="." groups=["Tappers"]]
unique_name_in_owner = true
offset_left = 40.0
offset_top = 140.0
offset_right = 340.0
offset_bottom = 940.0
theme = ExtResource("2_h3gj1")
action_mode = 0
icon = ExtResource("3_4h1cd")
icon_alignment = 1

[node name="PrimTapper" type="Button" parent="." groups=["Tappers"]]
unique_name_in_owner = true
offset_left = 1580.0
offset_top = 140.0
offset_right = 1880.0
offset_bottom = 940.0
theme = ExtResource("1_2kch6")
action_mode = 0
icon = ExtResource("5_6bqow")
icon_alignment = 1

[connection signal="pressed" from="SecTapper" to="." method="_on_left_tapper_pressed"]
[connection signal="pressed" from="PrimTapper" to="." method="_on_right_tapper_pressed"]
